--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "api-node",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "main.js",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
@@ -25,23 +25,33 @@
 		"eslint-plugin-vue": "^9.29.1",
 		"husky": "^9.1.6",
 		"lerna": "^3.22.1",
-		"lint-staged": "^15.2.10"
+		"lint-staged": "^15.2.10",
+		"nodemon": "^3.1.7"
 	},
 	"dependencies": {
 		"@types/node": "^22.7.9",
+		"bcryptjs": "^2.4.3",
 		"cross-env": "^7.0.3",
+		"dotenv": "^16.4.5",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
-		"prettier": "^3.3.3"
+		"koa": "^2.15.3",
+		"koa-body": "^6.0.1",
+		"koa-router": "^13.0.1",
+		"mysql2": "^3.11.3",
+		"prettier": "^3.3.3",
+		"sequelize": "^6.37.4"
 	},
 	"scripts": {
 		"init": "sh ./scripts/shell/init.sh --all",
+		"dev": "nodemon ./src/main.js",
+		"lint:eslint": "eslint .",
 		"lint-staged": "lint-staged",
 		"prepare": "husky"
 	},
 	"lint-staged": {
 		"src/**/*.{js,jsx,ts,tsx,vue}": [
-			"eslint --ext .js,.jsx,.vue,.ts,.tsx ./"
+			"eslint ."
 		]
 	},
 	"config": {
