--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"dotenv": "^16.4.5",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
+		"jsonwebtoken": "^9.0.2",
 		"koa": "^2.15.3",
 		"koa-body": "^6.0.1",
 		"koa-router": "^13.0.1",
